@@ -7802,6 +7802,18 @@ part parent "m48"
   ;
 
 #------------------------------------------------------------
+# ATmega48PB
+#------------------------------------------------------------
+
+part parent "m48"
+    id               = "m48pb";
+    desc             = "ATmega48PB";
+    signature        = 0x1e 0x92 0x10;
+
+    ocdrev              = 1;
+  ;
+
+#------------------------------------------------------------
 # ATmega88
 #------------------------------------------------------------
 
@@ -7997,6 +8009,18 @@ part parent "m88"
     id               = "m88p";
     desc             = "ATmega88P";
     signature        = 0x1e 0x93 0x0f;
+
+    ocdrev              = 1;
+  ;
+
+#------------------------------------------------------------
+# ATmega88PB
+#------------------------------------------------------------
+
+part parent "m88"
+    id               = "m88pb";
+    desc             = "ATmega88PB";
+    signature        = 0x1e 0x93 0x16;
 
     ocdrev              = 1;
   ;
@@ -8199,6 +8223,18 @@ part parent "m168"
     id              = "m168p";
     desc            = "ATmega168P";
     signature       = 0x1e 0x94 0x0b;
+
+    ocdrev              = 1;
+;
+
+#------------------------------------------------------------
+# ATmega168PB
+#------------------------------------------------------------
+
+part parent "m168"
+    id              = "m168pb";
+    desc            = "ATmega168PB";
+    signature       = 0x1e 0x94 0x15;
 
     ocdrev              = 1;
 ;
